# HKUST-ML3-14

./: gitToCatkin.sh  transform.py  wide_angle.launch
backup/: CMakeLists.txt  CMakeLists.txt~  package.xml  thingsToChangeforRunning
backup/src/: KeyFrameDisplay.h  class.cpp~  class.h  class.h~  pc_fetcher.cpp
backup/src/.svn/: all-wcprops
beginner_tutorials/: CMakeLists.txt  README.md  package.xml  pointcloud
beginner_tutorials/.svn/: all-wcprops  entries
beginner_tutorials/cmake_modules/.svn/: all-wcprops  entries
beginner_tutorials/include/.svn/: all-wcprops  entries
beginner_tutorials/include/beginner_tutorials/.svn/: all-wcprops  entries
beginner_tutorials/msg/.svn/: all-wcprops  entries
beginner_tutorials/scripts/: pose.py  sim3.i
beginner_tutorials/scripts/.svn/: all-wcprops  entries
beginner_tutorials/scripts/.svn/text-base/: sim3.py.svn-base  sim3_wrap.c.svn-base  test.py.svn-base
beginner_tutorials/scripts/data/: pointcloud_00003  pointcloud_00005  pointcloud_00006
beginner_tutorials/scripts/data/.svn/: all-wcprops  entries
beginner_tutorials/scripts/data/.svn/text-base/: pointcloud_00001.svn-base  pointcloud_00002.svn-base  pointcloud_00004.svn-base
beginner_tutorials/scripts/sophus/.svn/: all-wcprops  entries
beginner_tutorials/src/: append.cpp
beginner_tutorials/src/.svn/: entries
beginner_tutorials/src/sophus/.svn/: all-wcprops  entries
beginner_tutorials/srv/.svn/: all-wcprops  entries
cc_fabmap/: CMakeLists.txt  CMakeLists.txt~  package.xml
cc_fabmap/msg/: similarityTransformStamped.msg
cc_fabmap/src/: .cproject  .project  CentralStorage.cpp  CentralStorage.h  HelperFcts.cpp  HelperFcts.h  KeyFrameListenerTraining.cpp  KeyFrameListenerTraining.h  SyncListener.cpp  SyncListener.h  cc_fabmap_node.cpp
cc_fabmap/src/unused/: KeyFrameListenerTesting.cpp  KeyFrameListenerTesting.h  KeyFrameListenerTraining.cpp  KeyFrameListenerTraining.h  PoseListener.cpp  PoseListener.h  PtClListener.cpp  PtClListener.h  RobotListener_Keyframes.cpp
omni_robot/: CMakeLists.txt
omni_robot/omni_robot/: CMakeLists.txt~  package.xml  toZyan.sh
omni_robot/omni_robot/change/: D_cmake  D_fetcher
omni_robot/omni_robot/msg/: similarityTransformStamped.msg
omni_robot/omni_robot/msg/.svn/: entries
omni_robot/omni_robot/src/: pc_fetcher.cpp  pc_fetcher.cpp~  pc_fetcher.h  pc_fetcher.h~  pc_filter.h~
omni_robot/omni_robot/src/.svn/: entries
omni_robot/omni_robot/src/.svn/text-base/: append.cpp.svn-base
omni_robot/src/: pc_fetcher.cpp  pc_fetcher.cpp~  pc_filter.cpp  slave_robot.cpp
omni_robot/src/.svn/text-base/: backup.svn-base
scripts/: launch_camera.sh  lsd_slam_run.sh  sample.sh  studio.sh
slave_robot/: CMakeLists.txt  CMakeLists.txt~  cm  package.xml  package.xml~  toDaniel.sh  toZyan.sh
slave_robot/change/: Daniel_cmake  Zyan_cmake  Zyan_fetcher
slave_robot/msg/: keyframeGraphMsgStamped.msg  keyframeMsgStamped.msg
slave_robot/msg/.svn/: all-wcprops
slave_robot/msg/unused/: associatedPixelsCoords.2.msg
slave_robot/src/: KeyFrameDisplay.h  KeyFrameDisplay.h~  class.cpp~  class.h~  pc_fetcher.cpp  pc_fetcher.cpp~  pc_fetcher.h  pc_fetcher.h~  pc_filter.cpp  pc_filter.cpp~  pc_filter.h  pc_filter.h~  pc_oct.cpp  pc_oct.cpp~  pubandsub.cpp  slave_robot.cpp  slave_robot.cpp~
slave_robot/src/.svn/text-base/: KeyFrameDisplay.h.svn-base
slave_robot/src/sophus/.svn/: entries
